--- a/client/src/scss/main.css
+++ b/client/src/scss/main.css
@@ -3898,7 +3898,7 @@ span {
 
 @media (max-width: 575px) {
   .breadcrumb-wrapper .page-heading h1 {
-    font-size: 45px;
+    font-size: 36px;
   }
 }
 
@@ -8167,6 +8167,13 @@ input.main-search-input::placeholder {
 
 .product-section {
   position: relative;
+  /* margin: 30px 0; */
+}
+
+@media (max-width: 767px) {
+  .product-section {
+    margin: 30px 0 100px 0;
+  }
 }
 
 .product-section .shape-image {
@@ -9676,6 +9683,12 @@ input.main-search-input::placeholder {
   font-weight: 700;
 }
 
+@media (max-width: 767px) {
+  .product-details-wrapper .product-details-content h3 {
+    font-size: 25px;
+  }
+}
+
 .product-details-wrapper .product-details-content p {
   font-weight: 400;
 }
@@ -9916,7 +9929,7 @@ input.main-search-input::placeholder {
 
 @media (max-width: 575px) {
   .product-details-wrapper .single-tab {
-    padding-top: 50px;
+    padding-top: 0px;
   }
 }
 
