--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -806,6 +806,7 @@ table td .info h6 {
   font-size: 14px;
   font-weight: 500;
   margin-bottom: 0px;
+  overflow: hidden;
 }
 
 table td .info p {
